# boxes

./: .gitignore  Boxes.sln  CMakeLists.txt  CMakeSettings.json
Boxes/: Boxes.vcxproj  Boxes.vcxproj.filters  game.h  game_logic.cpp  main.cpp  playing_cards.h
cmake/: copy_dlls.cmake
libs/cards/include/: cards.hpp
src/: game_display.cpp  main.cpp  resource.h  std_exception.h
